添加笔画分割
将竖线的分割添加其中

--- a/Calligraphy/Calligraphy/Calligraphy.vcxproj
+++ b/Calligraphy/Calligraphy/Calligraphy.vcxproj
@@ -89,6 +89,7 @@
   <ItemGroup>
     <ClInclude Include="pixel.h" />
     <ClInclude Include="point.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="stroke.h" />
     <ClInclude Include="word.h" />
   </ItemGroup>
