--- a/Calligraphy/Calligraphy/Calligraphy.vcxproj.filters
+++ b/Calligraphy/Calligraphy/Calligraphy.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClInclude Include="pixel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
