--- a/Calligraphy/Calligraphy/Calligraphy.vcxproj
+++ b/Calligraphy/Calligraphy/Calligraphy.vcxproj
@@ -82,14 +82,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Calligraphy.cpp" />
+    <ClCompile Include="Exception.cpp" />
     <ClCompile Include="pixel.cpp" />
     <ClCompile Include="point.cpp" />
     <ClCompile Include="stroke.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="exception.h" />
+    <ClInclude Include="list.h" />
     <ClInclude Include="pixel.h" />
     <ClInclude Include="point.h" />
-    <ClInclude Include="resource.h" />
     <ClInclude Include="stroke.h" />
     <ClInclude Include="word.h" />
   </ItemGroup>
