--- a/Calligraphy/Calligraphy/Calligraphy.vcxproj.filters
+++ b/Calligraphy/Calligraphy/Calligraphy.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClCompile Include="Exception.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="word.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="generatexml.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="point.h">
@@ -48,6 +54,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="list.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="generatexml.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
